修改article swag
